#2945 Update IPT core libraries
- Java 17
- Struts 7
- Jakarta servlet 6
- Jetty 12
- Validation API 3/Hibernate validator 8