@@ -31,6 +31,7 @@ import org.gbif.ipt.service.registry.RegistryManager;
 import org.gbif.ipt.struts2.SimpleTextProvider;
 
 import java.io.IOException;
+import java.io.Serial;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -45,29 +46,42 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
+import lombok.Getter;
+
 /**
  * The Action responsible for all user input relating to extension management.
  */
 public class ExtensionsAction extends POSTAction {
 
-  // logging
+  @Serial
+  private static final long serialVersionUID = -8804785290324044090L;
+
   private static final Logger LOG = LogManager.getLogger(ExtensionsAction.class);
 
   private final ExtensionManager extensionManager;
   private final VocabulariesManager vocabManager;
   private final RegistryManager registryManager;
   // list of the latest registered extension versions
+  @Getter
   private List<Extension> latestExtensionVersions;
+  @Getter
   private List<Extension> extensions;
-  private List<Vocabulary>  vocabularies;
+  @Getter
+  private List<Vocabulary> vocabularies;
+  @Getter
   private Map<String, List<ExtensionProperty>> propertiesByGroup = new HashMap<>();
+  @Getter
   private Extension extension;
   private String url;
   private Boolean synchronise = false;
+  @Getter
   private Date lastSynchronised;
+  @Getter
   private List<Extension> newExtensions;
   private ConfigWarnings configWarnings;
   private ResourceManager resourceManager;
+  // true if all installed extensions are the latest version, false otherwise
+  @Getter
   private boolean upToDate = true;
 
   @Inject
@@ -95,14 +109,14 @@ public class ExtensionsAction extends POSTAction {
       for (Resource r : resourceManager.list()) {
         if (!r.getMappings(id).isEmpty()) {
           LOG.warn("Extension mapped in resource {}", r.getShortname());
-          String msg = getText("admin.extension.delete.error.mapped", new String[] {r.getShortname()});
+          String msg = getText("admin.extension.delete.error.mapped", new String[]{r.getShortname()});
           throw new DeletionNotAllowedException(DeletionNotAllowedException.Reason.EXTENSION_MAPPED, msg);
         }
       }
       extensionManager.uninstallSafely(id);
-      addActionMessage(getText("admin.extension.delete.success", new String[] {id}));
+      addActionMessage(getText("admin.extension.delete.success", new String[]{id}));
     } catch (DeletionNotAllowedException e) {
-      addActionWarning(getText("admin.extension.delete.error", new String[] {id}));
+      addActionWarning(getText("admin.extension.delete.error", new String[]{id}));
       addActionExceptionWarning(e);
     }
     return SUCCESS;
@@ -144,28 +158,12 @@ public class ExtensionsAction extends POSTAction {
         }
       }
 
-      addActionMessage(getText("admin.extension.update.success", new String[] {id}));
+      addActionMessage(getText("admin.extension.update.success", new String[]{id}));
     } catch (Exception e) {
       LOG.error(e);
-      addActionWarning(getText("admin.extension.update.error", new String[] {e.getMessage()}), e);
+      addActionWarning(getText("admin.extension.update.error", new String[]{e.getMessage()}), e);
     }
     return SUCCESS;
-  }
-
-  public Extension getExtension() {
-    return extension;
-  }
-
-  public List<Extension> getExtensions() {
-    return extensions;
-  }
-
-  public List<Vocabulary> getVocabularies() {
-    return vocabularies;
-  }
-
-  public List<Extension> getNewExtensions() {
-    return newExtensions;
   }
 
   /**
@@ -186,9 +184,9 @@ public class ExtensionsAction extends POSTAction {
       } catch (Exception e) {
         String errorMsg = e.getMessage();
         if (e instanceof RegistryException) {
-          errorMsg = RegistryException.logRegistryException(((RegistryException)e), this);
+          errorMsg = RegistryException.logRegistryException(((RegistryException) e), this);
         }
-        addActionWarning(getText("admin.extensions.synchronise.error", new String[] {errorMsg}));
+        addActionWarning(getText("admin.extensions.synchronise.error", new String[]{errorMsg}));
         LOG.error(e);
       }
     }
@@ -245,10 +243,6 @@ public class ExtensionsAction extends POSTAction {
     }
   }
 
-  public Map<String, List<ExtensionProperty>> getPropertiesByGroup() {
-    return propertiesByGroup;
-  }
-
   /**
    * Method used for 1) updating each extensions' isLatest field, and 2) for action logging (logging if at least
    * one extension is not up-to-date).
@@ -290,7 +284,7 @@ public class ExtensionsAction extends POSTAction {
         LOG.error(msg);
 
         // add startup error message that explains the consequence of the Registry error
-        msg = getText("admin.extensions.couldnt.load", new String[] {cfg.getRegistryUrl()});
+        msg = getText("admin.extensions.couldnt.load", new String[]{cfg.getRegistryUrl()});
         configWarnings.addStartupError(msg);
         LOG.error(msg);
       }
@@ -331,7 +325,7 @@ public class ExtensionsAction extends POSTAction {
         LOG.error(msg);
 
         // add startup error message that explains the consequence of the Registry error
-        msg = getText("admin.extensions.vocabularies.couldnt.load", new String[] {cfg.getRegistryUrl()});
+        msg = getText("admin.extensions.vocabularies.couldnt.load", new String[]{cfg.getRegistryUrl()});
         configWarnings.addStartupError(msg);
         LOG.error(msg);
       }
@@ -356,7 +350,7 @@ public class ExtensionsAction extends POSTAction {
       LOG.error(msg);
 
       // add startup error message that explains the consequence of the Registry error
-      msg = getText("admin.extensions.couldnt.load", new String[] {cfg.getRegistryUrl()});
+      msg = getText("admin.extensions.couldnt.load", new String[]{cfg.getRegistryUrl()});
       configWarnings.addStartupError(msg);
       LOG.error(msg);
     } finally {
@@ -372,14 +366,13 @@ public class ExtensionsAction extends POSTAction {
    * is determined by its issued date.
    *
    * @param extensions unfiltered list of all registered extensions
-   *
    * @return filtered list of extensions
    */
   protected List<Extension> getLatestVersions(List<Extension> extensions) {
     // sort extensions by issued date, starting with latest issued
     List<Extension> sorted = extensions.stream()
         .sorted(Comparator.comparing(Extension::getIssued, Comparator.nullsLast(Comparator.reverseOrder())))
-        .collect(Collectors.toList());
+        .toList();
 
     // populate list of latest extension versions
     Map<String, Extension> extensionsByRowtype = new HashMap<>();
@@ -399,10 +392,10 @@ public class ExtensionsAction extends POSTAction {
   public String save() {
     try {
       extensionManager.install(new URL(url));
-      addActionMessage(getText("admin.extension.install.success", new String[] {url}));
+      addActionMessage(getText("admin.extension.install.success", new String[]{url}));
     } catch (Exception e) {
       LOG.error(e);
-      addActionWarning(getText("admin.extension.install.error", new String[] {url}), e);
+      addActionWarning(getText("admin.extension.install.error", new String[]{url}), e);
     }
     return SUCCESS;
   }
@@ -413,8 +406,8 @@ public class ExtensionsAction extends POSTAction {
    * Then synchronises all installed extensions and vocabularies with registry to make sure their content is
    * up-to-date.
    *
-   * @throws IOException if an extension or vocabulary file cannot be downloaded
-   * @throws RegistryException if the list of registered extensions or vocabularies cannot be loaded from Registry
+   * @throws IOException            if an extension or vocabulary file cannot be downloaded
+   * @throws RegistryException      if the list of registered extensions or vocabularies cannot be loaded from Registry
    * @throws InvalidConfigException if any of the extensions or vocabularies synchronised is invalid (e.g. bad URL)
    */
   private void synchronise() throws IOException, RegistryException, InvalidConfigException {
@@ -449,29 +442,12 @@ public class ExtensionsAction extends POSTAction {
     this.url = url;
   }
 
-  /**
-   * @return list of the latest registered extensions
-   */
-  public List<Extension> getLatestExtensionVersions() {
-    return latestExtensionVersions;
-  }
-
   public void setLatestExtensionVersions(List<Extension> latestExtensionVersions) {
     this.latestExtensionVersions = latestExtensionVersions;
-  }
-
-  /**
-   * @return true if all installed extensions are the latest version, false otherwise
-   */
-  public boolean isUpToDate() {
-    return upToDate;
   }
 
   public void setUpToDate(boolean upToDate) {
     this.upToDate = upToDate;
   }
 
-  public Date getLastSynchronised() {
-    return lastSynchronised;
-  }
 }
